<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <name>rds-ui-idm</name>
  <groupId>au.com.rds.sb</groupId>
  <artifactId>rds-ui-idm</artifactId>
  <packaging>pom</packaging>
  <version>1.9.0</version>

  <parent>
    <groupId>org.flowable</groupId>
    <artifactId>flowable-root</artifactId>
    <relativePath>../..</relativePath>
    <version>6.1.0</version>
  </parent>

  <properties>
    	<!-- Maven build properties -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.7</java.version>

		<!-- Web container version -->
		<tomcat.version>7.0.53</tomcat.version>
        <flowable.version>6.1.0</flowable.version>
  </properties>

	<prerequisites>
		<maven>3.0.0</maven>
	</prerequisites>

	<modules>
		<module>flowable-ui-idm-logic</module>
		<module>flowable-ui-idm-rest</module>
		<module>flowable-ui-idm-conf</module>
		<module>flowable-ui-idm-app</module>
	</modules>

	<dependencyManagement>
	  <dependencies>
        <dependency>
            <groupId>au.com.rds.sb</groupId>
            <artifactId>flowable-ui-idm-logic</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>au.com.rds.sb</groupId>
            <artifactId>flowable-ui-idm-rest</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>au.com.rds.sb</groupId>
            <artifactId>flowable-ui-idm-conf</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>

        <!-- overrides what defined in parent due to project.version -->
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-engine</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-spring</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-bpmn-model</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-bpmn-converter</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-json-converter</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-engine-common-api</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-engine-common</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-explorer</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-simple-workflow</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-common-rest</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-rest</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-idm-api</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-idm-engine</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-idm-spring</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-dmn-api</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-dmn-engine</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-dmn-model</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-dmn-xml-converter</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-dmn-json-converter</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-dmn-rest</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-dmn-engine-configurator</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-dmn-spring</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-dmn-spring-configurator</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-form-model</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-form-api</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-form-json-converter</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-form-engine</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-form-engine-configurator</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-form-spring</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-form-spring-configurator</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-form-rest</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-content-api</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-content-engine</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-content-spring</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-content-engine-configurator</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-content-spring-configurator</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-content-rest</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-camel</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-mule</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-crystalball</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-app-rest</artifactId>
          <type>war</type>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-cxf</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-ldap</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-bpmn-layout</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-process-validation</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-image-generator</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable5-engine</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable5-spring</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable5-compatibility</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable5-spring-compatibility</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
          <groupId>org.flowable</groupId>
          <artifactId>flowable-jmx</artifactId>
          <version>${flowable.version}</version>
        </dependency>
        <dependency>
            <groupId>org.flowable</groupId>
            <artifactId>flowable-ui-common</artifactId>
            <version>${flowable.version}</version>
        </dependency>
	 </dependencies>
	</dependencyManagement>

  <build>
    <plugins>
      <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-enforcer-plugin</artifactId>
		<version>1.3.1</version>
		<executions>
			<execution>
				<id>enforce-versions</id>
				<goals>
					<goal>enforce</goal>
				</goals>
				<configuration>
					<rules>
						<requireMavenVersion>
							<message>You are running an older version of Maven. JHipster
								requires at least Maven 3.0</message>
							<version>[3.0.0,)</version>
						</requireMavenVersion>
						<requireJavaVersion>
							<message>You are running an older version of Java. The Modeler Application requires at least JDK 1.6</message>
							<version>[1.6.0,)</version>
						</requireJavaVersion>
					</rules>
				</configuration>
			</execution>
		</executions>
	  </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.16</version>
        <configuration>
			<argLine>-XX:MaxPermSize=128m -Xmx256m</argLine>
			<forkCount>1</forkCount>
			<reuseForks>true</reuseForks>
			<!-- Force alphabetical order to have a reproducible build -->
			<runOrder>alphabetical</runOrder>
		</configuration>
      </plugin>
      <plugin>
        <!-- use later version so can get alt***DeploymentRepository properties -->
        <artifactId>maven-deploy-plugin</artifactId>
        <version>2.8</version>
      </plugin>
    </plugins>
  </build>
</project>
